--- a/src/GUI/ModManager/Styling/ColorThemes/Dracula.axaml
+++ b/src/GUI/ModManager/Styling/ColorThemes/Dracula.axaml
@@ -1,14 +1,26 @@
 <ResourceDictionary xmlns="https://github.com/avaloniaui" xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml">
 	<Design.PreviewWith>
-		<Border Padding="20">
-			<!--  Add Controls for Previewer Here  -->
+		<Border Padding="20" Background="Black">
+			<StackPanel Spacing="10">
+				<ComboBox PlaceholderText="Select an item">
+					<ComboBoxItem>Item 1</ComboBoxItem>
+					<ComboBoxItem>Item 2</ComboBoxItem>
+				</ComboBox>
+				<ComboBox Width="200"
+					HorizontalContentAlignment="Center"
+					IsEnabled="False"
+					SelectedIndex="1">
+					<ComboBoxItem>Item 1</ComboBoxItem>
+					<ComboBoxItem>Item 2</ComboBoxItem>
+				</ComboBox>
+			</StackPanel>
 		</Border>
 	</Design.PreviewWith>
 	<ResourceDictionary.ThemeDictionaries>
 		<ResourceDictionary x:Key="Dark">
 			<!--<Color x:Key="SukiBackground">#282A36</Color>-->
-			<Color x:Key="SukiStrongBackground">#282A36</Color>
 			<!--<Color x:Key="SukiLightBackground">#282A36</Color>-->
+			<Color x:Key="SukiStrongBackground">#282A36</Color>
 			<Color x:Key="SukiCardBackground">#282A36</Color>
 			<Color x:Key="SukiGlassCardBackground">#282A36</Color>
 			<Color x:Key="SukiGlassCardOpaqueBackground">#282A36</Color>
