--- a/src/GUI/ModManager/Styling/CompactSukiMenu.axaml
+++ b/src/GUI/ModManager/Styling/CompactSukiMenu.axaml
@@ -1,15 +1,17 @@
 <ResourceDictionary xmlns="https://github.com/avaloniaui"
-    xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-    xmlns:controls="using:SukiUI.Controls"
-    xmlns:system="clr-namespace:System;assembly=netstandard">
+	xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
+	xmlns:controls="using:SukiUI.Controls"
+	xmlns:system="clr-namespace:System;assembly=netstandard">
 	<Design.PreviewWith>
-		<Menu Theme="{StaticResource CompactSukiMenuStyle}">
-			<MenuItem Header="File">
-				<MenuItem Header="Save" />
-			</MenuItem>
-			<MenuItem Header="Edit" />
-			<MenuItem Header="Tools" />
-		</Menu>
+		<Grid Background="Black">
+			<Menu Theme="{StaticResource CompactSukiMenuStyle}">
+				<MenuItem Header="File">
+					<MenuItem Header="Save" />
+				</MenuItem>
+				<MenuItem Header="Edit" />
+				<MenuItem Header="Tools" />
+			</Menu>
+		</Grid>
 	</Design.PreviewWith>
 	<ControlTheme x:Key="SukiCompactTopLevelMenuItem" TargetType="MenuItem">
 		<Setter Property="FontWeight" Value="Regular" />
@@ -18,17 +20,17 @@
 		<Setter Property="Template">
 			<ControlTemplate>
 				<Border Name="root"
-				    Margin="2,2"
-				    Background="{TemplateBinding Background}"
-				    BorderBrush="{DynamicResource SukiLightBorderBrush}"
-				    BorderThickness="0"
-				    CornerRadius="0">
+					Margin="2,2"
+					Background="{TemplateBinding Background}"
+					BorderBrush="{DynamicResource SukiLightBorderBrush}"
+					BorderThickness="0"
+					CornerRadius="0">
 					<Panel>
 						<ContentPresenter Name="PART_HeaderPresenter"
-						    Margin="{TemplateBinding Padding}"
-						    HorizontalContentAlignment="Left"
-						    VerticalContentAlignment="Center"
-						    Content="{TemplateBinding Header}">
+							Margin="{TemplateBinding Padding}"
+							HorizontalContentAlignment="Left"
+							VerticalContentAlignment="Center"
+							Content="{TemplateBinding Header}">
 							<ContentPresenter.DataTemplates>
 								<DataTemplate DataType="system:String">
 									<TextBlock FontWeight="Regular" Text="{CompiledBinding}" />
@@ -36,23 +38,23 @@
 							</ContentPresenter.DataTemplates>
 						</ContentPresenter>
 						<Popup Name="PART_Popup"
-						    ClipToBounds="True"
-						    IsLightDismissEnabled="True"
-						    IsOpen="{TemplateBinding IsSubMenuOpen, Mode=TwoWay}"
-						    Opacity="0"
-						    OverlayInputPassThroughElement="{Binding $parent[Menu]}"
-						    Placement="BottomEdgeAlignedLeft">
+							ClipToBounds="True"
+							IsLightDismissEnabled="True"
+							IsOpen="{TemplateBinding IsSubMenuOpen, Mode=TwoWay}"
+							Opacity="0"
+							OverlayInputPassThroughElement="{Binding $parent[Menu]}"
+							Placement="BottomEdgeAlignedLeft">
 							<LayoutTransformControl Name="PART_LayoutTransform" RenderTransformOrigin="50%, 0%">
 								<Grid Margin="-12,0,0,0">
 									<Border Margin="16,8,8,8" BoxShadow="{DynamicResource SukiPopupShadow}" CornerRadius="6" />
 									<Border Name="PART_Border"
-									    Margin="16,8,8,8"
-									    Background="{DynamicResource SukiCardBackground}"
-									    BorderBrush="{DynamicResource SukiLightBorderBrush}"
-									    BorderThickness="1"
-									    BoxShadow="{DynamicResource SukiPopupShadow}"
-									    ClipToBounds="True"
-									    CornerRadius="6">
+										Margin="16,8,8,8"
+										Background="{DynamicResource SukiCardBackground}"
+										BorderBrush="{DynamicResource SukiLightBorderBrush}"
+										BorderThickness="1"
+										BoxShadow="{DynamicResource SukiPopupShadow}"
+										ClipToBounds="True"
+										CornerRadius="6">
 										<ScrollViewer>
 											<ItemsPresenter Name="PART_ItemsPresenter" Grid.IsSharedSizeScope="True" ItemsPanel="{TemplateBinding ItemsPanel}" />
 										</ScrollViewer>
