--- a/src/GUI/ModManager/Styling/Controls/FilterButtonExpander.axaml
+++ b/src/GUI/ModManager/Styling/Controls/FilterButtonExpander.axaml
@@ -1,8 +1,8 @@
 <ResourceDictionary xmlns="https://github.com/avaloniaui"
-                    xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-                    xmlns:content="using:SukiUI.Content"
-                    xmlns:controls="using:SukiUI.Controls"
-                    xmlns:materialIcons="clr-namespace:Material.Icons.Avalonia;assembly=Material.Icons.Avalonia">
+	xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
+	xmlns:content="using:SukiUI.Content"
+	xmlns:controls="using:SukiUI.Controls"
+	xmlns:materialIcons="clr-namespace:Material.Icons.Avalonia;assembly=Material.Icons.Avalonia">
 	<ControlTheme x:Key="FilterButtonExpander" TargetType="Expander">
 		<Setter Property="TextBlock.TextAlignment" Value="Start" />
 		<Setter Property="ClipToBounds" Value="False" />
@@ -11,43 +11,42 @@
 		<Setter Property="Template">
 			<ControlTemplate>
 				<Border Name="PART_RootBorder"
-				        Background="{TemplateBinding Background}"
-				        BorderBrush="{TemplateBinding BorderBrush}"
-				        BorderThickness="{TemplateBinding BorderThickness}"
-				        CornerRadius="{TemplateBinding CornerRadius}">
+					Background="{TemplateBinding Background}"
+					BorderBrush="{TemplateBinding BorderBrush}"
+					BorderThickness="{TemplateBinding BorderThickness}"
+					CornerRadius="{TemplateBinding CornerRadius}">
 					<Border Name="PART_InnerBorder" CornerRadius="{TemplateBinding CornerRadius}">
 						<Panel>
 							<controls:ContentExpandControl Name="PART_ContentExpand"
-							                               HorizontalContentAlignment="{TemplateBinding HorizontalContentAlignment}"
-							                               VerticalContentAlignment="{TemplateBinding VerticalContentAlignment}"
-							                               Content="{TemplateBinding Content}"
-							                               ContentTemplate="{TemplateBinding ContentTemplate}" />
+								HorizontalContentAlignment="{TemplateBinding HorizontalContentAlignment}"
+								VerticalContentAlignment="{TemplateBinding VerticalContentAlignment}"
+								Content="{TemplateBinding Content}"
+								ContentTemplate="{TemplateBinding ContentTemplate}" />
 
 							<LayoutTransformControl Name="PART_ToggleTransform">
 								<DockPanel>
 									<ToggleButton Name="PART_ToggleButton"
-									              HorizontalAlignment="Stretch"
-									              VerticalAlignment="Center"
-									              HorizontalContentAlignment="Stretch"
-									              Background="Transparent"
-									              BorderBrush="{DynamicResource SukiBorderBrush}"
-									              BorderThickness="0"
-									              Classes="Basic"
-									              DockPanel.Dock="Right"
-									              IsChecked="{TemplateBinding IsExpanded,
-									                                          Mode=TwoWay}">
+										HorizontalAlignment="Stretch"
+										VerticalAlignment="Center"
+										HorizontalContentAlignment="Stretch"
+										Background="Transparent"
+										BorderBrush="{DynamicResource SukiBorderBrush}"
+										BorderThickness="0"
+										Classes="Basic"
+										DockPanel.Dock="Right"
+										IsChecked="{TemplateBinding IsExpanded, Mode=TwoWay}">
 										<Grid ColumnDefinitions="Auto,*,Auto">
 											<ContentPresenter Grid.Column="0"
-											                  HorizontalAlignment="Left"
-											                  VerticalAlignment="Center"
-											                  Content="{TemplateBinding Header}"
-											                  FontWeight="DemiBold" />
+												HorizontalAlignment="Left"
+												VerticalAlignment="Center"
+												Content="{TemplateBinding Header}"
+												FontWeight="DemiBold" />
 											<materialIcons:MaterialIcon Name="PART_Icon"
-											                            Grid.Column="2"
-											                            Width="16"
-											                            Height="16"
-											                            Margin="0"
-											                            Kind="FilterPlus" />
+												Grid.Column="2"
+												Width="16"
+												Height="16"
+												Margin="0"
+												Kind="FilterPlus" />
 										</Grid>
 									</ToggleButton>
 								</DockPanel>
