--- a/src/GUI/ModManager/Styling/Resources.axaml
+++ b/src/GUI/ModManager/Styling/Resources.axaml
@@ -88,7 +88,7 @@
 		<MenuItem Command="{Binding Path=OpenNexusModsPageCommand, Source={x:Static manager:AppServices.Commands}}"
 		    CommandParameter="{Binding}"
 		    Header="Open NexusMods Page (Browser)..."
-		    IsVisible="{Binding OpenNexusModsLink}" />
+		    IsVisible="{Binding HasNexusModsLink}" />
 		<MenuItem Command="{Binding Path=OpenModioPageCommand, Source={x:Static manager:AppServices.Commands}}"
 		    CommandParameter="{Binding}"
 		    Header="Open Mod.io Page (Browser)..."
