Carry over latest master branch changes
This includes updating the settings files default values, fixing the settings file subscriptions (since json serialization instances a new object, subscriptions need to happen only outside of that).

Added ModCrashSanityCheck workarounds.
Newtonsoft.Json is being phased out for System.Text.Json.
Use Octokit GitHub release data, instead of trying to convert the string to a dictionary and JArray.
Fix default value handling for serialization/deserialization.
Support environment variables and relative paths in path settings.
Update IgnoredMods.json.
Rename settings for better alphabetical sorting.

--- a/src/GUI/ModManager/Views/Main/MainCommandBar.axaml
+++ b/src/GUI/ModManager/Views/Main/MainCommandBar.axaml
@@ -212,6 +212,10 @@
 					    Content="{materialIcons:MaterialIconExt Kind=FolderOpen}"
 					    Foreground="RoyalBlue"
 					    ToolTip.Tip="Open Mods Folder..." />
+					<Button Command="{Binding OpenLogsFolderCommand}"
+					    Content="{materialIcons:MaterialIconExt Kind=Contract}"
+					    Foreground="Teal"
+					    ToolTip.Tip="Open Script Extender Logs Folder..." />
 					<Button Command="{Binding LaunchGameCommand}"
 					    Content="{materialIcons:MaterialIconExt Kind=Launch}"
 					    Foreground="Red"
