--- a/src/GUI/ModManager/Views/Mods/ModEntryView.axaml
+++ b/src/GUI/ModManager/Views/Mods/ModEntryView.axaml
@@ -9,8 +9,9 @@
     d:DesignWidth="800"
     x:DataType="mod:ModData"
     ContextFlyout="{StaticResource ModContextFlyout}"
+    IsHitTestVisible="True"
     mc:Ignorable="d">
-	<Panel>
+	<Panel Background="Transparent">
 		<!--<Rectangle HorizontalAlignment="Stretch" VerticalAlignment="Stretch" Fill="Transparent" />-->
 		<StackPanel Orientation="Horizontal">
 			<TextBlock VerticalAlignment="Center"
